--- a/jc-chatroom-oc/Info.plist
+++ b/jc-chatroom-oc/Info.plist
@@ -20,6 +20,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>将访问您的摄像头，允许可以正常开启直播</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>将访问您的麦克风，允许可以录制声音</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>将访问您的相册，允许可以将视频保存在相册</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>将访问您的相册，允许可以将相册内容上传到服务器</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
